--- a/src/scss/ru-banner.scss
+++ b/src/scss/ru-banner.scss
@@ -7,6 +7,7 @@
         align-items: center;
         position: relative;
         flex-wrap: nowrap;
+        overflow: hidden;
         border-radius: 50px;
         gap: 40px;
 
